# username-checker

./: Dockerfile  README.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: lint.yml  push_hub.yml
config/: alembic.ini
deploy/: docker-compose.yml
migrations/db/: env.py
migrations/db/versions/: 2024_10_27_1506-a0240bd26827_first_migration.py  2024_10_30_0916-41ea0b8541b6_first_migration.py
scripts/: lint.sh
username_checker/: __main__.py
username_checker/common/log/: configuration.py  installer.py
username_checker/common/settings/: dynaconf_config.py  settings_model.py
username_checker/core/entities/: subscription.py  user.py  username.py
username_checker/core/interactors/: subscription.py  username.py
username_checker/core/interfaces/: commiter.py  scheduler.py  subscription.py  uploader.py  user.py  username.py
username_checker/core/services/: subscription.py  user.py  username.py
username_checker/infrastructure/checker/: telegram.py
username_checker/infrastructure/di/: broker.py  checker.py  clients.py  database.py  interactors.py  logs.py  proxy.py  settings.py  taskiq_provider.py  uploader.py
username_checker/infrastructure/proxy/: user.py
username_checker/infrastructure/tkq/: constants.py  factory.py  override.py  scheduler.py  tasks.py
username_checker/infrastructure/uploader/: json.py
username_checker/tgbot/: setup.py
username_checker/tgbot/di/: bot.py  factory.py  i18n.py  throttling.py
username_checker/tgbot/dialogs/: __init__.py
username_checker/tgbot/filters/: username.py
username_checker/tgbot/handlers/: __init__.py  callbacks.py  commands.py  username.py
username_checker/tgbot/i18n/: enums.py  factory.py
username_checker/tgbot/middlewares/: __init__.py  i18n.py  init.py  interactors.py  logs.py  throttling.py  user.py
username_checker/tgbot/throttling/: constant.py  exc.py  manager.py
(+59 files in other folders)
